  * The fasl file format has changed again, because the internal
    representation of types now includes a new slot to support the new
    SUBTYPEP-of-NOT-types logic.
  * (not a change in the main branch of SBCL, but a related prototype
    which can hopefully be merged into the main branch of SBCL in the
    future:) Brian Spilsbury has produced a Unicode-enabled variant of
    sbcl-0.7.0, available as a patch against sbcl-0.7.0 at
      <http://designix.com.au/brian/SBCL/sbcl-0.7.0-unicode.p0.gz>.
  * Bug 151 fixed: GET-DISPATCH-MACRO-CHAR now returns NIL for undefined
    dispatch macro character combinations. (thanks to Alexey Dejneka)
  * Bugfix in PARSE-NAMESTRING: we now correctly parse unix namestrings 
    that superficially look like logical namestrings correctly.
  * USER-HOMEDIR-PATHNAME now returns a (physical) pathname that SBCL
    can deal with.
  * Bugfix in DEFSTRUCT: BOA constructor lambda lists now accept (name
    default supplied-p) for &optional and &key arguments. (thanks to
    Martin Atzmueller)

changes in sbcl-0.7.4 relative to sbcl-0.7.3:
  * bug 147 fixed: The compiler preserves its block link/count
    invariants more correctly now so that it doesn't crash. (thanks
    to Alexey Dejneka)

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.