@@ -444,10 +444,13 @@
       (immediate-constant "Immed")
       (noise (symbol-name (sc-name sc))))))
 ;;; FIXME: Could this, and everything that uses it, be made #!+SB-SHOW?
+
 
 ;;; The loader uses this to convert alien names to the form they need in
 ;;; the symbol table (for example, prepending an underscore).
 (defun extern-alien-name (name)
   (declare (type simple-string name))
-  ;; On the X86 we don't do anything.
-  name)
+  ;; OpenBSD is non-ELF, and needs a _ prefix
+  #!+openbsd (concatenate 'string "_" name)
+  ;; The other (ELF) ports currently don't need any prefix
+  #!-openbsd name)
